--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,9 +10,9 @@
     <div class="inner">
 
         <header>
-            <h2>TWENTY</h2>
+            <h2>LINA</h2>
         </header>
-        <p>This is <strong>Twenty</strong>, a free
+        <p>This is <strong>LINA</strong>, a free
         <br />
         responsive template
         <br />
