--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,11 +10,11 @@
     <div class="inner">
 
         <header>
-            <h2>LINA</h2>
+            <h2>Lina's blog</h2>
         </header>
-        <p>This is <strong>LINA</strong>, a free
+        <p>This is <strong>Lina</strong>, a free
         <br />
-        responsive template
+        博客
         <br />
         by <a href="http://html5up.net">HTML5 UP</a>.</p>
         <footer>
