--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,7 +12,7 @@
         <header>
             <h2>Lina's blog</h2>
         </header>
-        <p>This is <strong>Lina</strong>, a free
+        <p>This is Lina
         <br />
         博客
         <br />
